# http-sink-connector

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Connector.toml  DEVELOPER.md  Makefile  README.md  bors.toml  config-example.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  publish_dev.yml
actions/: install-zig.sh  zig-install.sh
crates/http-sink/: Cargo.toml  Connector.toml  README.md  config-example.yaml  sample-config.yaml
crates/http-sink/.hub/: package-meta.yaml
crates/http-sink/hub/: package-meta.yaml
crates/http-sink/src/: config.rs  main.rs  sink.rs
crates/tiny-http-server/: Cargo.toml
crates/tiny-http-server/src/: main.rs
hub/: http-0.1.0.ipkg  package-meta.yaml
src/: config.rs  main.rs  sink.rs
tests/: auto-offset-management.bats  integration-sends-data-via-post.bats  integration-sends-data-via-post.yaml
tests/bats-helpers/: tools_check.bash
tiny-http-server/src/: main.rs
