[workspace]
members = [
    "crates/http-sink",
    "crates/tiny-http-server",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies]
async-std = { version = "1.13",  default-features = false, features = ["attributes", "tokio1"] }

fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.12.0" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.15.0" }
fluvio-smartmodule = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.12.0" }
fluvio-smartengine = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.12.0" }
