[package]
name = "http-sink"
version = "0.2.9"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Connector that reads data from a topic and sends to external HTTP webhook"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
async-std = { workspace = true }
anyhow = { version = "1.0" }
reqwest = { version = "0.12" }
url = { version = "2.4", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
humantime-serde = { version = "1.1", default-features = false  }

fluvio = { workspace = true }
fluvio-connector-common = { workspace = true, features = ["derive"] }
