[package]
name = "http-sink"
version = "0.2.11"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Connector that reads data from a topic and sends to external HTTP webhook"
edition = "2021"

[dependencies]
adaptive_backoff = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true, default-features = false}
futures = { workspace = true, default-features = false }
async-std = { workspace = true }
reqwest = { workspace = true }
humantime = {workspace = true}
url = { workspace = true, default-features = false, features = ["serde"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
humantime-serde = { workspace = true, default-features = false  }

fluvio-future = { workspace = true }
fluvio = { workspace = true }
fluvio-connector-common = { workspace = true, features = ["derive"] }
