[package]
name = "tiny-http-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]

[dependencies]
tiny_http = "0.12"
async-std = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"]}

